* Fix a bug that prevented dithering from being used

v1.6 (2016-08-13)
-----------------

* Added timecode creator (for the adventurous)
* Correct interpretation of ALSA's buffer size
* Command-line flag to remove all window decorations (--no-decor)
* A dummy deck for test cases
* Internal restructing in preparation for new features
* Build without warnings on modern compilers

Acknowledgements: Daniel James, Alessio Treglia

v1.5 (2014-02-09)
-----------------

* Scan the music library in the background on startup
* Function to re-scan a crate
* Performance improovement to audio resampler
* Additional font paths
* Minor bug fixes

v1.4 (2013-06-08)
-----------------

* Scalable user interface
* Simple control of timecode levels for 'software pre-amp'
* Bug fix: MIDI interface now works when only JACK audio is used
* Dicer flag renamed to '--dicer'
* Minor fixes

Acknowledgements: Daniel Holbach

v1.3 (2012-11-29)
-----------------

* Tempo (BPM) field, and sorting and changing of sort modes
* Allow initial X window size and position to be set by the user
* Makefile modifications for packagers
* Track loading errors are reported to the main interface

Acknowledgements: Engine, Lukas Fleischer, Daniel Holbach, Matej Laitl

v1.2 (2012-03-23)
-----------------

* Scan directories only for known file extensions
* Support Novation 'Dicer' controller
* Cue points, including 'punch' feature
* Extra protection against skips: optionally lock memory into RAM

Acknowledgements: Novation, Olivier Gauthier, Christoph Krapp, Mitchell Smith

v1.1 (2012-01-30)
-----------------

* Bug fix: incorrect display of track time remaining
* Instant loading of duplicate tracks
* Optionally protect decks during playback
* Improvements to music selector
* Increase speed building look-up tables

v1.0 (2011-08-01)
-----------------

* Changing of timecode at runtime
* Improved parsing of vinyl track numbers
* Bug fix: affecting multiple decks with different sample rates